--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 # Dependencies
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 package-lock.json
+yarn.lock
+
+# Build outputs
+dist/
+build/
+.cache/
 
 # Google Cloud SDK - DO NOT COMMIT
 google-cloud-sdk/
@@ -44,3 +53,44 @@ firebase-debug.log
 # Local testing
 test-data/
 *.test.local.js
+
+# Temporary files
+*.tmp
+*.temp
+temp/
+
+# Backup files
+*.backup
+*.bak
+*~
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Serverless directories
+.serverless/
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
