Configure Render network IPs and enhanced CORS security
NETWORK CONFIGURATION:
- Integrated Render outbound IP addresses for allowlisting
  * 44.229.227.142
  * 54.188.71.94
  * 52.13.128.108
  * 74.220.48.0/24
  * 74.220.56.0/24

SECURITY ENHANCEMENTS:
- Updated CORS to allow specific origins only
- Added pastelpoetics.com and localhost for testing
- Removed wildcard CORS (improved security)
- Rate limiting remains active (60 req/min)

DOCUMENTATION:
- Created RENDER_NETWORK_CONFIG.md with IP usage guide
- Updated .env.example with Render deployment notes
- Added troubleshooting for network/firewall issues

USE CASES:
- Stripe IP allowlisting (optional extra security)
- External API firewall rules
- Payment gateway IP restrictions
- Supabase/database IP allowlisting

Server ready for production deployment on Render.

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,18 +1,37 @@
 # Copy to .env and fill
-STRIPE_SECRET=sk_test_your_key_here
+# Stripe Configuration (REQUIRED)
+STRIPE_SECRET=sk_live_51SM7yMRMDdiM5E9A...
+STRIPE_WEBHOOK_SECRET=whsec_...
+
+# Server Configuration
+PORT=4242
+NODE_ENV=production
+
+# PayPal (Optional - if using PayPal payments)
 PAYPAL_CLIENT_ID=your-paypal-client-id
 PAYPAL_SECRET=your-paypal-secret
-PORT=4242
+
+# Database (Optional - for order storage)
 SUPABASE_URL=https://xyzcompany.supabase.co
 SUPABASE_SERVICE_ROLE=service_role_key_here
-STRIPE_WEBHOOK_SECRET=whsec_...
-# SMTP settings for nodemailer (send confirmation emails)
+
+# Email Configuration (Optional - for order confirmations)
+# Option 1: SMTP
 SMTP_HOST=smtp.example.com
 SMTP_PORT=587
 SMTP_USER=send@example.com
 SMTP_PASS=supersecret
-# Optional: Use SendGrid API instead of SMTP
+
+# Option 2: SendGrid API (instead of SMTP)
 SENDGRID_API_KEY=
 
-# reCAPTCHA v2/v3 secret (protect comment/newsletter endpoints)
+# Security (Optional)
 RECAPTCHA_SECRET=
+
+# Render.com Deployment Notes:
+# - Set STRIPE_SECRET in Render dashboard environment variables
+# - Root Directory: server
+# - Build Command: npm install
+# - Start Command: node index.js
+# - Outbound IPs: See RENDER_NETWORK_CONFIG.md for IP allowlisting
+
