System audit: Fix SEO URLs, standardize STRIPE_SECRET_KEY, add comprehensive audit report
- Fixed placeholder example.com URLs in index.html schema, sitemap.xml, robots.txt
- Updated all docs to use STRIPE_SECRET_KEY consistently (removed old STRIPE_SECRET references)
- Created comprehensive system audit report with all findings and fixes
- Added test-checkout-flow.html diagnostic tool
- Identified critical Stripe API key whitespace issue in Render (requires manual fix)

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,6 @@
 # Copy to .env and fill
 # Stripe Configuration (REQUIRED)
-STRIPE_SECRET=sk_live_51SM7yMRMDdiM5E9A...
+STRIPE_SECRET_KEY=sk_live_51SM7yMRMDdiM5E9A...
 STRIPE_WEBHOOK_SECRET=whsec_...
 
 # Server Configuration
@@ -29,7 +29,7 @@ SENDGRID_API_KEY=
 RECAPTCHA_SECRET=
 
 # Render.com Deployment Notes:
-# - Set STRIPE_SECRET in Render dashboard environment variables
+# - Set STRIPE_SECRET_KEY in Render dashboard environment variables
 # - Root Directory: server
 # - Build Command: npm install
 # - Start Command: node index.js
